Squares at setup are background color

--- a/colorgame.css
+++ b/colorgame.css
@@ -28,7 +28,7 @@ h1{
 }
 .square {
   width: 30%;
-  background: purple;
+  background: #232323;
   padding-bottom: 30%;
   float: left;
   margin: 1.66%;
