--- a/colorgame.css
+++ b/colorgame.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #232323;
+  background: #232323;
   margin: 0;
   font-family: "Montserrat", "Avenir";
 }
@@ -8,7 +8,7 @@ h1{
   text-align: center;
   line-height: 1.1;
   color: white;
-  background-color: steelblue;
+  background: steelblue;
   margin: 0;
   font-weight: normal;
   text-transform: uppercase;
